TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "126005219090272" [label="Start"];
  "126005219090272" -> "126005219230288";
  "126005219230288" [label="Code"];
  "126005219230288" -> "126005219230432";
  "126005219230432" [label="Function"];
  "126005219230432" -> "126005219230528";
  "126005219230432" -> "126005219230576";
  "126005219230432" -> "126005219230624";
  "126005219230528" [label="main"];
  "126005219230576" [label="Parameters"];
  "126005219230624" [label="Code"];
  "126005219230624" -> "126005219230720";
  "126005219230624" -> "126005219230768";
  "126005219230624" -> "126005219230864";
  "126005219230720" [label="Code"];
  "126005219230720" -> "126005219230816";
  "126005219230816" [label="Declaration"];
  "126005219230816" -> "126005219230912";
  "126005219230816" -> "126005219230960";
  "126005219230912" [label="x"];
  "126005219230960" [label="1"];
  "126005219230768" [label="Code"];
  "126005219230768" -> "126005219231008";
  "126005219231008" [label="Declaration"];
  "126005219231008" -> "126005219231104";
  "126005219231008" -> "126005219231152";
  "126005219231104" [label="x"];
  "126005219231152" [label="2"];
  "126005219230864" [label="Return"];
  "126005219230864" -> "126005219231200";
  "126005219230864" -> "126005219231248";
  "126005219231200" [label="return"];
  "126005219231248" [label="0"];
}
